--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # animated_text_lerp: ^2.0.0
   # random_text_reveal: ^0.0.7
   animated_text_kit: ^4.2.3
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
