--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # random_text_reveal: ^0.0.7
   animated_text_kit: ^4.2.3
   google_fonts: ^6.2.1
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
