--- a/web/manifest.json
+++ b/web/manifest.json
@@ -20,7 +20,7 @@
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
+            "src": "icons/Icon-512.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
